--- a/M2-D4.html
+++ b/M2-D4.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
-<!--
-    WELCOME TO THE STRIVE TEAM GENERATOR!
 
-    In this app you will generate teams and assign the participants to them.
-    You will use the Bootstrap components for the elements of your app.
-
-    The features are the following:
-    - The user should be able to add a list of names, find a way to get the user input and fill a list with the new name.
-    - The user should be able to set the number of teams he wants, so that they will be generated. A team is just another list to be displayed.
-    - An "Assign" button will be required in order to launch the team generation functionality.
-    - Every time the user clicks on the "Assign" button, a random name is placed in a team and removed from the initial list.
-    - Each team should be inside a "column" to be responsive.
-    - [EXTRA] Create a button to remove a user from a team, and putting him back in the main list, waiting to be reassigned.
-    - [EXTRA] Create a button to reset the state of the app.
--->
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -30,6 +16,9 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <script
@@ -42,5 +31,51 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"
     ></script>
+    <div class="container">
+      <h1 class="text-center mb-2 pt-2"><b>Strive Team Generator</b></h1>
+      <hr style="background-color: black;"></hr>
+      <form>
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col">
+        <div class="form-group">
+          <label for="exampleInputEmail1"><b>Add Participant Name</b></label>
+          <input
+            type="email"
+            class="form-control mb-2"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+          />
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+      </div>
+      <div class="col">
+        <p class="text-center"><b>List Of Participants</b></p>
+        <ol>
+          <li>Test</li>
+          <li>Test</li>
+
+
+        </ol>
+      </div>
+      </div>
+      </form>
+      
+        <p class="mt-2"><b>Number of teams</b></p>
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Example select</label>
+            <select class="form-control" id="exampleFormControlSelect1" style="max-width:150px;">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+        </form>
+
+        <button type="button" class="btn btn-success mt-3">Assign</button>
+    
+    </div>
   </body>
 </html>
